--- a/styling.css
+++ b/styling.css
@@ -5,11 +5,11 @@
 }
 body{
     min-height: 100vh;
-    background-color:azure;
+    background-color:rgb(179, 218, 218);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
-nav{
+nav{width:100%;
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0,0,0,0.1);  
 }
@@ -24,7 +24,7 @@ nav li{
 }
 nav a{
     height: 100%;
-    padding: 0 30px;
+    padding: 0 10px;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -32,7 +32,8 @@ nav a{
 
 }
 nav a:hover{
-    background-color:#f0f0f0;
+    background-color:#20202062;
+    color: white;
 }
 nav li:first-child{
     margin-right: auto;
@@ -58,14 +59,14 @@ nav li:first-child{
 .sidebar a{
     width: 100%;   
 }
-@media(max-width :800px){
+@media(max-width :900px){
     .hideOnMobile{
         display: none;
     }
 }
 
 #search {
-    
+    justify-items: left;
     text-decoration: none;
     display: flex;
     text-align: center;
@@ -74,7 +75,7 @@ nav li:first-child{
     font: inherit;
     border: 1px solid #242424; 
     border-radius: 4px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
   }
 
 .container{
@@ -82,25 +83,26 @@ nav li:first-child{
     min-height: 100vh;
     background-color: #f7f7f7;
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     padding: 0px 90px;
 }
-
-.content-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.content-section .card{
-    flex: 1;
+.card{
+    flex: auto;
+    width: 80%;
     margin: 20px 20px;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
+    justify-content: space-evenly;
+    padding: 25px 25px 25px 25px;
 }
 
-.content-section .card img{
+.card img{
     width: 50%;
-    height: auto;
+    height: 50%;
+}
+div ul{
+    width: 100%;
+    list-style-type: none;
+    justify-content: flex-end;
 }
